fixed spacing and height of sponsors
Changed and added padding and position to site sponsors

--- a/app.css
+++ b/app.css
@@ -82,8 +82,19 @@
 }
 #sponsors img{
     max-width: 100%;
-    max-height: 60%;
+    max-height: 100%;
 }
+
+#tespa{
+    position: relative;
+    top: -5em;
+}
+
+#uconnect{
+    padding-left: 18%;
+    padding-top: 10%;
+}
+
 
 .flip-card {
     background-color: transparent;
